@@ -1,2 +1,24 @@
 # ProjectMovieCollection
  First semester exam project @ EASV CS
+
+## VM Ooptions
+```
+--add-opens
+javafx.base/com.sun.javafx.runtime=com.jfoenix
+--add-opens
+javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+--add-opens
+javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+--add-opens
+javafx.base/com.sun.javafx.binding=com.jfoenix
+--add-opens
+javafx.base/com.sun.javafx.event=com.jfoenix
+--add-opens
+javafx.graphics/com.sun.javafx.stage=com.jfoenix
+--add-opens
+javafx.graphics/com.sun.javafx.scene=com.jfoenix
+--add-opens
+java.base/java.lang.reflect=com.jfoenix
+--add-opens
+jkm/ProjectMovieCollection.be=javafx.base
+```
